🐞 fix: button on mobile

--- a/style/drawer/ant.css
+++ b/style/drawer/ant.css
@@ -7,7 +7,7 @@
     border-right: 1px #e6e8eb solid;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     top: 0;
 }
 
